# science-nonline

./: .gitignore  README.md  pyproject.toml  related.json
docs/: README.md  dsb.md  eda.md  equal_areas_filter.md  lsi.md
experiments/: README.md  benchmark.py  download_data.py  validate_methods.py
ffiting/: __init__.py  common.py  facade.py  prefabs.py  visualization.py
math/: BDS_MNK_Expo_BAZA 2.mws  BDS_MNK_Expo_BAZA.mws  Diod.mws  Diod.xls  Primer_1.mws  SKVT.mws  SKVT.xls  Tr_KA.mws  Tr_KA_sum.mws  dsb_int.mw
notebooks/: README.md  eda.ipynb  lsi.ipynb  regressor.ipynb  streaming.ipynb
papers/: 03_DSBI_exploring.ipynb
scripts/: build_wiki.py
tests/: conftest.py  dsbi_tests.ipynb  ffitting.ipynb  interface_tests.ipynb  test_dsb.py  test_eda.py  test_imports.py  test_logging.py  test_lsi.py  test_options.py  test_regressor.py  test_streaming.py
wiki/: API-Auto.md  API-Diagnostics.md  API-Estimator.md  API-Fitting.md  API-Models.md  API-Scaling.md  API-Stochastic.md  API-Streaming.md  API-Types.md  API.md  Case-01-Control-Systems.md  Case-02-Big-Data-Streaming.md  Case-03-Noise-Robustness.md  Case-04-Realworld-Forecasting.md  Case-05-GPS-Trajectory.md  Case-06-Benchmark-LTSF.md  Case-07-Parallel-Scaling.md  Case-08-GPU-Batched-Projection.md  Case-09-Embedded-Footprint.md  Case-10-Fused-Partitioned-Batched.md  Cases-Analysis-01-Map-Reduce-Partitioned.md  Cases-Analysis-02-Pluggable-Basis.md  Cases-Analysis-03-Overlapping-Ensemble.md  Cases-Analysis-04-Joint-Multichannel.md  Cases-Analysis-05-Stagewise-Boosting.md  Cases-Analysis-06-Adaptive-Window-EAC.md  (+59 more)
(+119 files in other folders)
