[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dtfit"
version = "0.1.0"
description = "Differential-transformation fitting: nonlinear smoothing and forecasting via differential / non-Taylor transformations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Oleksandr Tuhanskykh", email = "ringanaro@gmail.com" }]
keywords = ["regression", "nonlinear", "time-series", "differential-transformations", "statistical-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
